2001-05-12  Chema Celorio  <chema@celorio.com>

	* location.c (location_store_xml): add a carriage return after the
	warning message

2001-05-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.4 RELEASE

2001-05-05  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (ximian_archiverConf.sh): Add sed expression to
	replace @VERSION@

2001-05-04  Bradford Hovinen  <hovinen@ximian.com>

	* cluster-location.c (cluster_location_do_rollback): Implement

	* location.c (location_do_rollback): Rename from do_rollback; make
	into virtual method
	(location_rollback_backend_to): 
	(location_rollback_backend_by): 
	(location_rollback_id): Update to call virtual method

	* Makefile.am (libximian_archiver_la_SOURCES): 
	(include_HEADERS): Add cluster.[ch], cluster-location.[ch]

2001-05-03  Bradford Hovinen  <hovinen@ximian.com>

	* cluster.[ch]: New class

	* cluster.c (cluster_new): 
	(cluster_load): Implement

	* archive.c (archive_set_arg): Add argument ARG_IS_GLOBAL
	(archive_class_init): Make ARG_PREFIX construct-only
	(archive_construct): Implement
	(do_load): Remove
	(archive_load): Use archive_construct; pass is_global as an
	argument to the object constructor

	* location.c (location_store_xml): Support STORE_DEFAULT
	(store_snapshot_cb): Use STORE_DEFAULT rather than STORE_MASK_PREVIOUS

	* location.h (_StoreType): Add STORE_DEFAULT

	* config-log.c (config_log_get_rollback_id_by_steps): Return the
	current id if the node represents default data

	* main.c (do_add_location): Cast correctly, fixing compiler
	warning

	* config-log.c (config_log_write_entry): Add parameter
	is_default_data; call get_beginning_of_time rather than
	get_current_date iff is_default_data is TRUE
	(get_beginning_of_time): Implement
	(has_nondefaults): Implement. Return TRUE iff the config log
	contains regular (non-default) entries

2001-04-26  Arturo Espinosa  <arturo@ximian.com>

	* location.c: changed g_critical to g_error. If a newer